Added to features and thoughts. Fixed some styling and arranged tags.

--- a/code/index.html
+++ b/code/index.html
@@ -69,6 +69,28 @@
     <h2>FEATURED PROJECTS</h2>
       <div class="featured-wrapper">
         <article class="card">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/FoodApp-frontend" class="image-box">
+            <img src="./assets/o-food-community.jpg" alt="A screenshot of O! - Food Community">
+            <div class="over-image">
+              <h6 class="project-name">START SHARING RECIPES!</h6>
+            </div>
+          </a>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/FoodApp-frontend" class="project-description">
+            <span class="red-bold">O! | Food Community.</span> A recipe sharing platform.<span class="red-bold underlined" >>></span>
+          </a>
+          <div class="tags">
+            <p class="tag">React.js</p>
+            <p class="tag">Redux</p>
+            <p class="tag">JavaScript</p>
+            <p class="tag">Styled-Components</p>
+            <p class="tag">Authorization</p>
+            <p class="tag">Express</p>
+            <p class="tag">MongoDB</p>
+            <p class="tag">Frontend + Backend</p>
+          </div>
+        </article>
+
+        <article class="card">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-todos" class="image-box">
             <img src="./assets/todo.jpg" alt="A screenshot of the ToDo app">
             <div class="over-image">
@@ -76,13 +98,14 @@
             </div>
           </a>
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-todos" class="project-description">
-            <span class="red-bold">TODO APP.</span> A ToDo web app done in React, using Redux <span class="red-bold underlined" >>></span>
+            <span class="red-bold">TODO APP.</span> A ToDo web app done in React, using Redux.<span class="red-bold underlined" >>></span>
           </a>
           <div class="tags">
-            <p class="tag">React.js</p>
+            <p class="tag">React</p>
             <p class="tag">Redux</p>
             <p class="tag">JSX</p>
             <p class="tag">JavaScript</p>
+            <p class="tag">Flexbox</p>
             <p class="tag">CSS</p>
           </div>
         </article>
@@ -101,6 +124,7 @@
             <p class="tag">React Native</p>
             <p class="tag">API</p>
             <p class="tag">JavaScript</p>
+            <p class="tag">Styled-Components</p>
           </div>
         </article>
 
@@ -112,12 +136,16 @@
             </div>
           </a>
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-redux-quiz-giraffes" class="project-description">
-            <span class="red-bold">GIRAFFE QUIZ. </span>A quiz where you put your giraffe knowledge to the test<span role="img" aria-label="brain and strong arm emojis">🧠💪🏼</span><span class="red-bold underlined" >>></span>
+            <span class="red-bold">GIRAFFE QUIZ. </span>A quiz where you put your giraffe knowledge to the test.<span role="img" aria-label="brain and strong arm emojis">🧠💪🏼</span><span class="red-bold underlined" >>></span>
           </a>
           <div class="tags">
-            <p class="tag">React Native</p>
-            <p class="tag">API</p>
+            <p class="tag">React</p>
+            <p class="tag">Redux</p>
+            <p class="tag">JSX</p>
             <p class="tag">JavaScript</p>
+            <p class="tag">Styled-Components</p>
+            <p class="tag">Flexbox</p>
+            <p class="tag">mob-programming</p>
           </div>
         </article>
 
@@ -129,13 +157,15 @@
             </div>
           </a>
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-nutrition" class="project-description">
-            <span class="red-bold">BARCODE CHECKER. </span>Type in a barcode of a food product and see nutritional information <span class="red-bold underlined" >>></span>
+            <span class="red-bold">BARCODE CHECKER. </span>Type in a barcode of a food product and see nutritional information.<span class="red-bold underlined" >>></span>
           </a>
           <div class="tags">
             <p class="tag">React</p>
             <p class="tag">Redux</p>
             <p class="tag">API</p>
             <p class="tag">JavaScript</p>
+            <p class="tag">Styled-Components</p>
+            <p class="tag">pair-programming</p>
           </div>
         </article>
 
@@ -147,14 +177,16 @@
             </div>
           </a>
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-happy-thoughts" class="project-description">
-            <span class="red-bold">HAPPY THOUGHTS.</span> A twitterlike API where you can post your happy thoughts<span role="img" aria-label="heart emoji">❤️</span><span class="red-bold underlined">>></span>
+            <span class="red-bold">HAPPY THOUGHTS.</span> A twitterlike API where you can post your happy thoughts.<span role="img" aria-label="heart emoji">❤️</span><span class="red-bold underlined">>></span>
           </a>
           <div class="tags">
-            <p class="tag">React.js</p>
+            <p class="tag">React</p>
             <p class="tag">JavaScript</p>
             <p class="tag">API</p>
-            <p class="tag">Flexbox</p>
-            <p class="tag">CSS</p>
+            <p class="tag">Heroku</p>
+            <p class="tag">Express</p>
+            <p class="tag">MongoDB</p>
+            <p class="tag">Frontend + Backend</p>
           </div>
         </article>
 
@@ -169,7 +201,26 @@
             <span class="red-bold">MOVIE SITE.</span> Website that shows upcoming movies in Sweden. <span class="red-bold underlined">>></span>
           </a>
           <div class="tags">
-            <p class="tag">React.js</p>
+            <p class="tag">React</p>
+            <p class="tag">JavaScript</p>
+            <p class="tag">API</p>
+            <p class="tag">CSS</p>
+            <p class="tag">Flexbox</p>
+          </div>
+        </article>
+        
+        <article class="card">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-survey" class="image-box">
+            <img src="./assets/Survey.jpg" alt="A screenshot of the survey website">
+            <div class="over-image">
+              <h6 class="project-name">TAKE THE SURVEY!</h6>
+            </div>
+          </a>
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-survey" class="project-description">
+            <span class="red-bold">I-WANT-TO-GET-TO-KNOW-YOU-SURVEY.</span> This survey is seriously curious.<span class="red-bold underlined">>></span>
+          </a>
+          <div class="tags">
+            <p class="tag">React</p>
             <p class="tag">JavaScript</p>
             <p class="tag">API</p>
             <p class="tag">CSS</p>
@@ -183,23 +234,11 @@
       <h5>OTHER PROJECTS</h5>
       <div class="other-projects">
         <div class="other-pro-container">
-          <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-survey" class="project-description">
-            <span class="red-bold red-bold-underlined">I-WANT-TO-GET-TO-KNOW-YOU-SURVEY. </span>  Online survey that wants to get to know you  <span class="red-bold red-bold-underlined">>></span>
-          </a>
-          <div class="tags">
-            <p class="tag">React.js</p>
-            <p class="tag">JavaScript</p>
-            <p class="tag">CSS</p>
-            <p class="tag">Flexbox</p>
-          </div>
-        </div>
-
-        <div class="other-pro-container">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-music-releases" class="project-description">
             <span class="red-bold red-bold-underlined">MUSIC RELEASES.</span> A music release site that pulls data from a static API. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
-            <p class="tag">React.js</p>
+            <p class="tag">React</p>
             <p class="tag">API</p>
             <p class="tag">JSX</p>
             <p class="tag">CSS</p>
@@ -210,7 +249,7 @@
 
         <div class="other-pro-container">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/Ragtulf/project-food-giraffes" class="project-description">
-            <span class="red-bold red-bold-underlined">FOOD REVIEW WEBSITE.</span> A website that shows Japanese food in London using Zomato API <span class="red-bold red-bold-underlined">>></span>
+            <span class="red-bold red-bold-underlined">FOOD REVIEW WEBSITE.</span> A website that shows Japanese food in London using Zomato API. <span class="red-bold red-bold-underlined">>></span>
           </a>
           <div class="tags">
             <p class="tag">JavaScript</p>
@@ -288,30 +327,30 @@
     <div class="my-thoughts-wrapper">
 
       <article class="thought-card">
-        <a aria-label="A link to an article about helpful website" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/helpful-websites-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=gidSyPxIS%2Fu0t9FnPf2ciQ%3D%3D" class="image-box">
-          <img src="./assets/toolbox.jpg" alt="A wall filled with carpentry tools">
+        <a aria-label="A link to an article about helpful website" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/boot-camp-check-ragna-%C3%BAlfarsd%C3%B3ttir/" class="image-box">
+          <img src="./assets/niklas-veenhuis-Q0AXQ8UctBc-unsplash.jpg" alt="Wild Swedish Flowers">
         </a>
-        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/helpful-websites-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=gidSyPxIS%2Fu0t9FnPf2ciQ%3D%3D" class="articles-by-me">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/boot-camp-check-ragna-%C3%BAlfarsd%C3%B3ttir/" class="articles-by-me">
           <div class="red-on-hover">
-            <p class="red-thin">APR 2020</p>
-          <h6>Helpful Websites: </h6>
+            <p class="red-thin">JUN 2020</p>
+          <h6>Boot Camp – Check!💥💪🏼🚀 </h6>
           <p>
-            I've finished the first half of the Technigo Frontend Development Bootcamp and it is SO MUCH FUN! Turns out this coding thing is really cool and fun and only gets better. <span class="red-bold" >>></span>
+            Technigo’s Frontend Developer boot camp has really exceeded all my expectations. I have learned so much. And it has been such a fun and thrilling ride. <span class="red-bold" >>></span>
           </p> 
           </div>
         </a>
       </article>
 
       <article class="thought-card">
-        <a aria-label="A link to an article about finding the way to code" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/finding-my-place-ragna-%C3%BAlfarsd%C3%B3ttir/" class="image-box">
-          <img src="./assets/larva.jpg" alt="A caterpillar on salad">
+        <a aria-label="A link to an article about inspiration and dedication" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/punch-today-face-ragna-%C3%BAlfarsd%C3%B3ttir/" class="image-box">
+          <img src="./assets/masks.jpeg" alt="Masks">
         </a>
-        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/finding-my-place-ragna-%C3%BAlfarsd%C3%B3ttir/" class="articles-by-me">
+        <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/punch-today-face-ragna-%C3%BAlfarsd%C3%B3ttir/" class="articles-by-me">
           <div class="red-on-hover">
-            <p class="red-thin">MAR 2020</p>
-          <h6>Finding My Place: </h6>
+            <p class="red-thin">MAY 2020</p>
+          <h6>Punch Today In The Face! </h6>
           <p>
-            I'm a developer. That is a scary thing for me to say. But our teachers at Technigo insist, we are developers. Junior developers. <span class="red-bold" >>></span>
+            I'm a patient person. The people who know me best say that I am too patient. But these days I'm doing things a little differently. <span class="red-bold" >>></span>
           </p> 
           </div>
         </a>
@@ -322,6 +361,14 @@
     
     <h5>MORE THOUGHTS</h5>
     <div class="more-thoughts-container">
+      <a aria-label="A link to an article about helpful website" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/helpful-websites-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=gidSyPxIS%2Fu0t9FnPf2ciQ%3D%3D" class="more-thoughts-list red-on-hover">
+        <span class="red-thin red-underline">APR 2020</span> Helpful Websites. <span class="red-bold red-underline">>></span>
+      </a>
+
+      <a aria-label="A link to an article about finding the way to code" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/finding-my-place-ragna-%C3%BAlfarsd%C3%B3ttir/" class="more-thoughts-list red-on-hover">
+        <span class="red-thin red-underline">MAR 2020</span> Finding My Place. <span class="red-bold red-underline">>></span>
+      </a>
+
       <a aria-label="A link to an article about beginning frondend development bootcamp" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/pulse/newbie-developer-ragna-%25C3%25BAlfarsd%25C3%25B3ttir/?trackingId=wdKjzbfdSuGGeTpwDT7cBg%3D%3D" class="more-thoughts-list red-on-hover">
         <span class="red-thin red-underline">FEB 2020</span> A Newbie Developer. <span class="red-bold red-underline">>></span>
       </a>
@@ -349,9 +396,7 @@
         <p>GitHub</p> 
         <p>Flexbox</p>
         <p>Redux</p>  
-        <p class="red-bold">UPCOMING</p> 
-        <p>Node.js</p>  
-        <p>SASS</p> 
+        <p>Node.js</p>
       </div>
   
       <div class="column">
@@ -361,10 +406,12 @@
         <p>Terminal</p>
         <p>APIs</p>
         <p>Postman</p>
+        <p>Figma</p>
         <p>Photoshop</p>
         <p>Illustrator</p>
         <p>InDesign</p>
         <p>Asana</p>
+        <p>Trello</p>
         <p>Slack</p>
       </div>
 
